--- a/4_analyses.Rmd
+++ b/4_analyses.Rmd
@@ -10,7 +10,7 @@ source("0_helpers.R")
 birthorder = readRDS("data/birthorder.rds")
 ```
 
-## Data Preperations
+## Data preperations
 ```{r data preperations}
 ### Variables
 birthorder = birthorder %>%
@@ -121,7 +121,7 @@ birthorder = birthorder %>%
 ```
 
 
-## Covariates and Birth Order
+## Covariates and birth order
 ```{r}
 round(cor(birthorder %>% ungroup() %>% select(birthorder_uterus_alive, birthorder_uterus_preg, birthorder_genes, sibling_count_uterus_alive, sibling_count_uterus_preg, sibling_count_genes), use = "pairwise.complete.obs"), 2) 
 
@@ -129,10 +129,10 @@ test = birthorder %>%
   filter(!is.na(riskA), !is.na(birthorder_genes))
 ```
 
-## Intelligence {.tabset}
-### G factor {.tabset}
+## Intelligence {.active .tabset}
+### g-factor {.tabset}
 
-#### Maternal Birth Order {.tabset}
+#### Maternal birth order {.tabset}
 
 ```{r}
 g_factor_m1 = lmer(g_factor ~ birthyear + male + sibling_count + (1 | mother_pidlink),
@@ -144,7 +144,7 @@ g_factor_m1 = lmer(g_factor ~ birthyear + male + sibling_count + (1 | mother_pid
 compare_models_markdown(g_factor_m1)
 ```
 
-#### Maternal Pregnancy Order {.tabset}
+#### Maternal pregnancy order {.tabset}
 
 ```{r}
 g_factor_preg_m1 = lmer(g_factor ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
@@ -156,7 +156,7 @@ g_factor_preg_m1 = lmer(g_factor ~ birthyear + male + sibling_count + (1 | mothe
 compare_models_markdown(g_factor_preg_m1)
 ```
 
-#### Parental Full Silbing Order {.tabset}
+#### Parental full sibling order {.tabset}
 
 ```{r}
 g_factor_parental_m1 = lmer(g_factor ~ birthyear + male + sibling_count + (1 | marriage_id),
@@ -171,7 +171,7 @@ compare_models_markdown(g_factor_parental_m1)
 
 ### Raven {.tabset}
 
-#### Maternal Birth Order {.tabset}
+#### Maternal birth order {.tabset}
 
 ```{r}
 raven_m1 = lmer(raven ~ birthyear + male + sibling_count + (1 | mother_pidlink),
@@ -183,7 +183,7 @@ raven_m1 = lmer(raven ~ birthyear + male + sibling_count + (1 | mother_pidlink),
 compare_models_markdown(raven_m1)
 ```
 
-#### Maternal Pregnancy Order {.tabset}
+#### Maternal pregnancy order {.tabset}
 
 ```{r}
 raven_preg_m1 = lmer(raven ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
@@ -195,7 +195,7 @@ raven_preg_m1 = lmer(raven ~ birthyear + male + sibling_count + (1 | mother_pidl
 compare_models_markdown(raven_preg_m1)
 ```
 
-#### Parental Full Silbing Order {.tabset}
+#### Parental full sibling order {.tabset}
 
 ```{r}
 raven_parental_m1 = lmer(raven ~ birthyear + male + sibling_count + (1 | marriage_id),
@@ -209,9 +209,9 @@ compare_models_markdown(raven_parental_m1)
 ```
 
 
-### Math {.tabset}
+### Numeracy {.tabset}
 
-#### Maternal Birth Order {.tabset}
+#### Maternal birth order {.tabset}
 
 ```{r}
 math_m1 = lmer(math ~ birthyear + male + sibling_count + (1 | mother_pidlink),
@@ -223,7 +223,7 @@ math_m1 = lmer(math ~ birthyear + male + sibling_count + (1 | mother_pidlink),
 compare_models_markdown(math_m1)
 ```
 
-#### Maternal Pregnancy Order {.tabset}
+#### Maternal pregnancy order {.tabset}
 
 ```{r}
 math_preg_m1 = lmer(math ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
@@ -235,7 +235,7 @@ math_preg_m1 = lmer(math ~ birthyear + male + sibling_count + (1 | mother_pidlin
 compare_models_markdown(math_preg_m1)
 ```
 
-#### Parental Full Silbing Order {.tabset}
+#### Parental full sibling order {.tabset}
 
 ```{r}
 math_parental_m1 = lmer(math ~ birthyear + male + sibling_count + (1 | marriage_id),
@@ -250,7 +250,7 @@ compare_models_markdown(math_parental_m1)
 
 ### Counting backwards {.tabset}
 
-#### Maternal Birth Order {.tabset}
+#### Maternal birth order {.tabset}
 
 ```{r}
 count_backwards_m1 = lmer(count_backwards ~ birthyear + male + sibling_count + (1 | mother_pidlink),
@@ -262,7 +262,7 @@ count_backwards_m1 = lmer(count_backwards ~ birthyear + male + sibling_count + (
 compare_models_markdown(count_backwards_m1)
 ```
 
-#### Maternal Pregnancy Order {.tabset}
+#### Maternal pregnancy order {.tabset}
 
 ```{r}
 count_backwards_preg_m1 = lmer(count_backwards ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
@@ -274,7 +274,7 @@ count_backwards_preg_m1 = lmer(count_backwards ~ birthyear + male + sibling_coun
 compare_models_markdown(count_backwards_preg_m1)
 ```
 
-#### Parental Full Silbing Order {.tabset}
+#### Parental full sibling order {.tabset}
 
 ```{r}
 count_backwards_parental_m1 = lmer(count_backwards ~ birthyear + male + sibling_count + (1 | marriage_id),
@@ -287,9 +287,9 @@ count_backwards_parental_m1 = lmer(count_backwards ~ birthyear + male + sibling_
 compare_models_markdown(count_backwards_parental_m1)
 ```
 
-### Immediate Word Recall {.tabset}
+### Immediate word recall {.tabset}
 
-#### Maternal Birth Order {.tabset}
+#### Maternal birth order {.tabset}
 
 ```{r}
 words_immediate_m1 = lmer(words_immediate ~ birthyear + male + sibling_count + (1 | mother_pidlink),
@@ -301,7 +301,7 @@ words_immediate_m1 = lmer(words_immediate ~ birthyear + male + sibling_count + (
 compare_models_markdown(words_immediate_m1)
 ```
 
-#### Maternal Pregnancy Order {.tabset}
+#### Maternal pregnancy order {.tabset}
 
 ```{r}
 words_immediate_preg_m1 = lmer(words_immediate ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
@@ -313,7 +313,7 @@ words_immediate_preg_m1 = lmer(words_immediate ~ birthyear + male + sibling_coun
 compare_models_markdown(words_immediate_preg_m1)
 ```
 
-#### Parental Full Silbing Order {.tabset}
+#### Parental full sibling order {.tabset}
 
 ```{r}
 words_immediate_parental_m1 = lmer(words_immediate ~ birthyear + male + sibling_count + (1 | marriage_id),
@@ -327,9 +327,9 @@ compare_models_markdown(words_immediate_parental_m1)
 ```
 
 
-### Delayed Word Recall {.tabset}
+### Delayed word recall {.tabset}
 
-#### Maternal Birth Order {.tabset}
+#### Maternal birth order {.tabset}
 
 ```{r}
 words_delayed_m1 = lmer(words_delayed ~ birthyear + male + sibling_count + (1 | mother_pidlink),
@@ -341,7 +341,7 @@ words_delayed_m1 = lmer(words_delayed ~ birthyear + male + sibling_count + (1 | 
 compare_models_markdown(words_delayed_m1)
 ```
 
-#### Maternal Pregnancy Order {.tabset}
+#### Maternal pregnancy order {.tabset}
 
 ```{r}
 words_delayed_preg_m1 = lmer(words_delayed ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
@@ -353,7 +353,7 @@ words_delayed_preg_m1 = lmer(words_delayed ~ birthyear + male + sibling_count + 
 compare_models_markdown(words_delayed_preg_m1)
 ```
 
-#### Parental Full Silbing Order {.tabset}
+#### Parental full sibling order {.tabset}
 
 ```{r}
 words_delayed_parental_m1 = lmer(words_delayed ~ birthyear + male + sibling_count + (1 | marriage_id),
@@ -368,7 +368,7 @@ compare_models_markdown(words_delayed_parental_m1)
 
 ### Adaptive Numbering {.tabset}
 
-#### Maternal Birth Order {.tabset}
+#### Maternal birth order {.tabset}
 
 ```{r}
 adaptive_numbering_m1 = lmer(adaptive_numbering ~ birthyear + male + sibling_count + (1 | mother_pidlink),
@@ -380,7 +380,7 @@ adaptive_numbering_m1 = lmer(adaptive_numbering ~ birthyear + male + sibling_cou
 compare_models_markdown(adaptive_numbering_m1)
 ```
 
-#### Maternal Pregnancy Order {.tabset}
+#### Maternal pregnancy order {.tabset}
 
 ```{r}
 adaptive_numbering_preg_m1 = lmer(adaptive_numbering ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
@@ -392,7 +392,7 @@ adaptive_numbering_preg_m1 = lmer(adaptive_numbering ~ birthyear + male + siblin
 compare_models_markdown(adaptive_numbering_preg_m1)
 ```
 
-#### Parental Full Silbing Order {.tabset}
+#### Parental full sibling order {.tabset}
 
 ```{r}
 adaptive_numbering_parental_m1 = lmer(adaptive_numbering ~ birthyear + male + sibling_count + (1 | marriage_id),
@@ -408,7 +408,7 @@ compare_models_markdown(adaptive_numbering_parental_m1)
 ## Personality {.tabset}
 ### Extraversion {.tabset}
 
-#### Maternal Birth Order {.tabset}
+#### Maternal birth order {.tabset}
 
 ```{r}
 big5_ext_m1 = lmer(big5_ext ~ birthyear + male + sibling_count + (1 | mother_pidlink),
@@ -420,7 +420,7 @@ big5_ext_m1 = lmer(big5_ext ~ birthyear + male + sibling_count + (1 | mother_pid
 compare_models_markdown(big5_ext_m1)
 ```
 
-#### Maternal Pregnancy Order {.tabset}
+#### Maternal pregnancy order {.tabset}
 
 ```{r}
 big5_ext_preg_m1 = lmer(big5_ext ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
@@ -432,7 +432,7 @@ big5_ext_preg_m1 = lmer(big5_ext ~ birthyear + male + sibling_count + (1 | mothe
 compare_models_markdown(big5_ext_preg_m1)
 ```
 
-#### Parental Full Silbing Order {.tabset}
+#### Parental full sibling order {.tabset}
 
 ```{r}
 big5_ext_parental_m1 = lmer(big5_ext ~ birthyear + male + sibling_count + (1 | marriage_id),
@@ -447,7 +447,7 @@ compare_models_markdown(big5_ext_parental_m1)
 
 ### Neuroticism {.tabset}
 
-#### Maternal Birth Order {.tabset}
+#### Maternal birth order {.tabset}
 
 ```{r}
 big5_neu_m1 = lmer(big5_neu ~ birthyear + male + sibling_count + (1 | mother_pidlink),
@@ -459,7 +459,7 @@ big5_neu_m1 = lmer(big5_neu ~ birthyear + male + sibling_count + (1 | mother_pid
 compare_models_markdown(big5_neu_m1)
 ```
 
-#### Maternal Pregnancy Order {.tabset}
+#### Maternal pregnancy order {.tabset}
 
 ```{r}
 big5_neu_preg_m1 = lmer(big5_neu ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
@@ -471,7 +471,7 @@ big5_neu_preg_m1 = lmer(big5_neu ~ birthyear + male + sibling_count + (1 | mothe
 compare_models_markdown(big5_neu_preg_m1)
 ```
 
-#### Parental Full Silbing Order {.tabset}
+#### Parental full sibling order {.tabset}
 
 ```{r}
 big5_neu_parental_m1 = lmer(big5_neu ~ birthyear + male + sibling_count + (1 | marriage_id),
@@ -486,7 +486,7 @@ compare_models_markdown(big5_neu_parental_m1)
 
 ### Conscientiousness {.tabset}
 
-#### Maternal Birth Order {.tabset}
+#### Maternal birth order {.tabset}
 
 ```{r}
 big5_con_m1 = lmer(big5_con ~ birthyear + male + sibling_count + (1 | mother_pidlink),
@@ -498,7 +498,7 @@ big5_con_m1 = lmer(big5_con ~ birthyear + male + sibling_count + (1 | mother_pid
 compare_models_markdown(big5_con_m1)
 ```
 
-#### Maternal Pregnancy Order {.tabset}
+#### Maternal pregnancy order {.tabset}
 
 ```{r}
 big5_con_preg_m1 = lmer(big5_con ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
@@ -510,7 +510,7 @@ big5_con_preg_m1 = lmer(big5_con ~ birthyear + male + sibling_count + (1 | mothe
 compare_models_markdown(big5_con_preg_m1)
 ```
 
-#### Parental Full Silbing Order {.tabset}
+#### Parental full sibling order {.tabset}
 
 ```{r}
 big5_con_parental_m1 = lmer(big5_con ~ birthyear + male + sibling_count + (1 | marriage_id),
@@ -525,7 +525,7 @@ compare_models_markdown(big5_con_parental_m1)
 
 ### Agreeableness {.tabset}
 
-#### Maternal Birth Order {.tabset}
+#### Maternal birth order {.tabset}
 
 ```{r}
 big5_agree_m1 = lmer(big5_agree ~ birthyear + male + sibling_count + (1 | mother_pidlink),
@@ -537,7 +537,7 @@ big5_agree_m1 = lmer(big5_agree ~ birthyear + male + sibling_count + (1 | mother
 compare_models_markdown(big5_agree_m1)
 ```
 
-#### Maternal Pregnancy Order {.tabset}
+#### Maternal pregnancy order {.tabset}
 
 ```{r}
 big5_agree_preg_m1 = lmer(big5_agree ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
@@ -549,7 +549,7 @@ big5_agree_preg_m1 = lmer(big5_agree ~ birthyear + male + sibling_count + (1 | m
 compare_models_markdown(big5_agree_preg_m1)
 ```
 
-#### Parental Full Silbing Order {.tabset}
+#### Parental full sibling order {.tabset}
 
 ```{r}
 big5_agree_parental_m1 = lmer(big5_agree ~ birthyear + male + sibling_count + (1 | marriage_id),
@@ -564,7 +564,7 @@ compare_models_markdown(big5_agree_parental_m1)
 
 ### Openness {.tabset}
 
-#### Maternal Birth Order {.tabset}
+#### Maternal birth order {.tabset}
 
 ```{r}
 big5_open_m1 = lmer(big5_open ~ birthyear + male + sibling_count + (1 | mother_pidlink),
@@ -576,7 +576,7 @@ big5_open_m1 = lmer(big5_open ~ birthyear + male + sibling_count + (1 | mother_p
 compare_models_markdown(big5_open_m1)
 ```
 
-#### Maternal Pregnancy Order {.tabset}
+#### Maternal pregnancy order {.tabset}
 
 ```{r}
 big5_open_preg_m1 = lmer(big5_open ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
@@ -588,7 +588,7 @@ big5_open_preg_m1 = lmer(big5_open ~ birthyear + male + sibling_count + (1 | mot
 compare_models_markdown(big5_open_preg_m1)
 ```
 
-#### Parental Full Silbing Order {.tabset}
+#### Parental full sibling order {.tabset}
 
 ```{r}
 big5_open_parental_m1 = lmer(big5_open ~ birthyear + male + sibling_count + (1 | marriage_id),
@@ -601,11 +601,11 @@ big5_open_parental_m1 = lmer(big5_open ~ birthyear + male + sibling_count + (1 |
 compare_models_markdown(big5_open_parental_m1)
 ```
 
-## Risk {.tabset}
+## Risk preference {.tabset}
 
 ### Risk A {.tabset}
 
-#### Maternal Birth Order {.tabset}
+#### Maternal birth order {.tabset}
 
 ```{r}
 riskA_m1 = lmer(riskA ~ birthyear + male + sibling_count + (1 | mother_pidlink),
@@ -617,7 +617,7 @@ riskA_m1 = lmer(riskA ~ birthyear + male + sibling_count + (1 | mother_pidlink),
 compare_models_markdown(riskA_m1)
 ```
 
-#### Maternal Pregnancy Order {.tabset}
+#### Maternal pregnancy order {.tabset}
 
 ```{r}
 riskA_preg_m1 = lmer(riskA ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
@@ -629,7 +629,7 @@ riskA_preg_m1 = lmer(riskA ~ birthyear + male + sibling_count + (1 | mother_pidl
 compare_models_markdown(riskA_preg_m1)
 ```
 
-#### Parental Full Silbing Order {.tabset}
+#### Parental full sibling order {.tabset}
 
 ```{r}
 riskA_parental_m1 = lmer(riskA ~ birthyear + male + sibling_count + (1 | marriage_id),
@@ -645,7 +645,7 @@ compare_models_markdown(riskA_parental_m1)
 
 ### Risk B {.tabset}
 
-#### Maternal Birth Order {.tabset}
+#### Maternal birth order {.tabset}
 
 ```{r}
 riskB_m1 = lmer(riskB ~ birthyear + male + sibling_count + (1 | mother_pidlink),
@@ -657,7 +657,7 @@ riskB_m1 = lmer(riskB ~ birthyear + male + sibling_count + (1 | mother_pidlink),
 compare_models_markdown(riskB_m1)
 ```
 
-#### Maternal Pregnancy Order {.tabset}
+#### Maternal pregnancy order {.tabset}
 
 ```{r}
 riskB_preg_m1 = lmer(riskB ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
@@ -669,7 +669,7 @@ riskB_preg_m1 = lmer(riskB ~ birthyear + male + sibling_count + (1 | mother_pidl
 compare_models_markdown(riskB_preg_m1)
 ```
 
-#### Parental Full Silbing Order {.tabset}
+#### Parental full sibling order {.tabset}
 
 ```{r}
 riskB_parental_m1 = lmer(riskB ~ birthyear + male + sibling_count + (1 | marriage_id),
