--- a/4_analyses.Rmd
+++ b/4_analyses.Rmd
@@ -1,3 +1,8 @@
+---
+output: html_document
+editor_options: 
+  chunk_output_type: console
+---
 # <span style="color:#A6D854">Birth Order Effects</span> {.tabset}
 
 ## Helper
