--- a/4_analyses.Rmd
+++ b/4_analyses.Rmd
@@ -75,6 +75,17 @@ qplot(birthorder$male)
 birthorder = birthorder %>% 
   mutate(
 # birthorder as factors with levels of 1, 2, 3, 4, 5, 5+
+    birthorder_naive2_factor = as.character(birthorder_naive2),
+    birthorder_naive2_factor = ifelse(birthorder_naive2 > 5, "5+",
+                                            birthorder_naive2_factor),
+    birthorder_naive2_factor = factor(birthorder_naive2_factor, 
+                                            levels = c("1","2","3","4","5","5+")),
+    sibling_count_naive2_factor = as.character(sibling_count_naive2),
+    sibling_count_naive2_factor = ifelse(sibling_count_naive2 > 5, "5+",
+                                               sibling_count_naive2_factor),
+    sibling_count_naive2_factor = factor(sibling_count_naive2_factor, 
+                                               levels = c("2","3","4","5","5+")),
+
     birthorder_uterus_alive_factor = as.character(birthorder_uterus_alive),
     birthorder_uterus_alive_factor = ifelse(birthorder_uterus_alive > 5, "5+",
                                             birthorder_uterus_alive_factor),
@@ -105,6 +116,14 @@ birthorder = birthorder %>%
     sibling_count_genes_factor = factor(sibling_count_genes_factor, 
                                         levels = c("2","3","4","5","5+")),
     # interaction birthorder * siblingcout for each birthorder
+    count_birthorder_naive2 =
+      factor(str_replace(as.character(interaction(birthorder_naive2_factor,                                                              sibling_count_naive2_factor)),
+                        "\\.", "/"),
+                                           levels =   c("1/2","2/2", "1/3",  "2/3",
+                                                        "3/3", "1/4", "2/4", "3/4", "4/4",
+                                                        "1/5", "2/5", "3/5", "4/5", "5/5",
+                                                        "1/5+", "2/5+", "3/5+", "4/5+",
+                                                        "5/5+", "5+/5+")),
     count_birthorder_uterus_alive =
       factor(str_replace(as.character(interaction(birthorder_uterus_alive_factor,                                                              sibling_count_uterus_alive_factor)),
                         "\\.", "/"),
@@ -128,9 +147,24 @@ birthorder = birthorder %>%
                                                         "1/5", "2/5", "3/5", "4/5", "5/5",
                                                         "1/5+", "2/5+", "3/5+", "4/5+",
                                                         "5/5+", "5+/5+")))
+```
 
 
+## Test
+```{r}
+birthorder = birthorder %>% mutate(birthyear = if_else(is.na(birth_year), ar08yr, birth_year))
+g_factor_m1 = lmer(g_factor ~ birthorder_naive2 + birthyear + male + sibling_count_naive2 + (1 | mother_pidlink), data = birthorder)
+summary(g_factor_m1)
+plot(allEffects(g_factor_m1))
+birthorder %>% select(g_factor, birthyear, male, birthorder_naive2_factor, mother_pidlink) %>% missingness_patterns()
 
+g_factor_m1 = lmer(g_factor ~ birthyear + male + sibling_count + (1 | mother_pidlink),
+                   data = birthorder %>%
+                     rename(sibling_count = sibling_count_naive2_factor,
+                            birth_order_nonlinear = birthorder_naive2_factor,
+                            birth_order = birthorder_naive2,
+                            count_birth_order = count_birthorder_naive2))
+compare_models_markdown(g_factor_m1)
 ```
 
 
