--- a/2_Inclusion.Rmd
+++ b/2_Inclusion.Rmd
@@ -246,6 +246,14 @@ n_birthorder
 
 ### Save Data
 ```{r data wrangling}
+## For the imputation we want to clean the dataset and get rid of all uninteresting data
+alldata_birthorder = alldata_birthorder %>%
+  mutate(age = ifelse(!is.na(IQage), IQage, age)) %>%
+  select(-ends_with("_ans"), -starts_with("co0"), -co10count, -starts_with("cob"), -matches("[a-z][0-9]r?"),
+         -matches("[a-z][0-9]r_reversed"), -matches("si[0-9]"), -sex.y, -duped_in_earlier_wave, -missing,
+         -IQage, starts_with("big5_")) %>%
+  rename(sex = sex.x)
+
 ## We only want to include people in the birthorder group that are no children of a family with mutiple births, no only children and people who actually have iq, personality, etc. data
 birthorder = alldata_birthorder %>%
   filter(any_multiple_birth != 1) %>%
@@ -267,6 +275,7 @@ birthorder = alldata_birthorder %>%
          sibling_count_genes = ifelse(sibling_count_genes == 1, NA, sibling_count_genes)) %>%
   filter(check == 1)
 
+saveRDS(alldata_birthorder, file = "data/alldata_birthorder")
 saveRDS(birthorder, file = "data/birthorder.rds")
 ```
 
